refactor(core): migrate from Xerces XNI to SAX-based architecture (#13)
This commit represents a major architectural refactoring of the NekoHTML parser, replacing the Xerces XNI-based implementation with a cleaner, more maintainable SAX-based architecture.

## Key Changes

### Core Architecture Migration
- Removed legacy XNI-based classes: HTMLConfiguration, HTMLScanner, HTMLTagBalancer
- Introduced new SAX-based implementation in org.codelibs.nekohtml.sax package
- Replaced Xerces bridge compatibility layer with direct SAX integration

### New SAX Components
- HTMLSAXParser: Main SAX-based HTML parser implementation
- HTMLSAXScanner: SAX-based lexical analyzer and tokenizer
- HTMLSAXConfiguration: Parser configuration and feature management
- HTMLTagBalancerFilter: SAX filter for tag balancing and structure correction
- SimpleHTMLScanner: Lightweight scanner for simple HTML parsing scenarios

### Parser Updates
- Refactored DOMParser to use new SAX-based backend
- Updated SAXParser to leverage new SAX architecture
- Added SAXToDOMHandler for SAX-to-DOM conversion
- Removed DOMFragmentParser (deprecated functionality)

### Support Components
- HTMLAttributesImpl: SAX attributes implementation
- HTMLQName: Qualified name handling for HTML elements
- XMLChar: XML character validation utilities
- EncodingMap: Character encoding mapping
- HTMLStringBuffer: Optimized string handling for parsing

### Test Infrastructure
- Removed legacy XNI-based tests (HTMLConfigurationTest, HTMLScannerTest, etc.)
- Added comprehensive SAX component tests (HTMLSAXParserTest, HTMLSAXScannerTest, etc.)
- Updated existing parser tests to work with new architecture
- Removed deprecated test utilities and bridges

### Removed Components
- filters package (DefaultFilter, Identity, NamespaceBinder, Purifier, ElementRemover, Writer)
- xercesbridge package (XercesBridge and version-specific implementations)
- Legacy augmentation and component infrastructure
- HTML5-specific test classes (consolid